c4prj1_deck/grade.txt
Grading at Tue Dec 24 09:02:19 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘make_deck_exclude’:
deck.c:72:30: error: invalid initializer
   d->n_cards = 0; card_t c = 0;
                              ^
Compilation of deck.c failed

Overall Grade: F
